# bot-arena

./: .gitignore  DESIGN.md  README.md  elm.json  index.html
scripts/: run.txt
src/: Components.elm  Engine.elm  Main.elm  Model.elm  Parse.elm  Styles.elm  View.elm
tests/: ParseErrorTest.elm  ParseTest.elm
variante_1/: BotArenaTUI.hs  botarena.cabal
variante_2/src/: Main.elm
