cabal-version:      >=1.24
name:               bot-arena
version:            0.1.0.0
synopsis:           Minimal Bot‑Arena TUI demo with Brick
category:           Game, UI
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
maintainer:         me@example.com
homepage:           https://example.com/bot-arena

-- description:
--   A toy project that demonstrates a grid‑based bot arena written in Haskell
--   with a Brick terminal user interface.  Bots are rendered as emojis and
--   the arena size is configurable at runtime.  This cabal file declares the
--   necessary dependencies so collaborators can build the demo with a single
--   `cabal build`.

extra-source-files:  README.md

source-repository head
  type:     git
  location: https://github.com/example/bot-arena

library
  exposed-modules:     BotArena.API
  other-modules:       
  hs-source-dirs:      src
  build-depends:       base >=4.14 && <5,
                       containers >=0.6,
                       vector      >=0.13,
                       text        >=2.0
  default-language:    GHC2021

executable bot-arena-tui
  main-is:             BotArenaTUI.hs
  hs-source-dirs:      .
  ghc-options:         -Wall -O2 -threaded
  build-depends:       base       >=4.14 && <5,
                       brick      >=2.0,
                       vty        >=6.0,
                       vector     >=0.13,
                       containers >=0.6
  default-language:    GHC2021

test-suite bot-arena-tests
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  build-depends:       base          >=4.14 && <5,
                       hspec         >=2.10,
                       QuickCheck    >=2.14,
                       vector        >=0.13,
                       bot-arena
  default-language:    GHC2021

